--- a/static-analysis-service/qark/Dockerfile
+++ b/static-analysis-service/qark/Dockerfile
@@ -1,1 +1,6 @@
-docker build -t ledokun/qark .
+FROM python:3.9.0a3-alpine3.10
+MAINTAINER sasha_karaseva
+USER root
+
+RUN pip install --user qark
+
